# tell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md
crates/analytics/: Cargo.toml
crates/analytics/src/: builder.rs  builder_test.rs  error.rs  filter.rs  filter_test.rs  lib.rs  timerange.rs  timerange_test.rs  timeseries.rs  timeseries_test.rs
crates/analytics/src/metrics/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: audit.rs  error.rs  lib.rs  ratelimit.rs  state.rs  types.rs
crates/api/src/auth/: extractors.rs  middleware.rs  mod.rs  typed_extractors.rs
crates/api/src/routes/: auth.rs  mod.rs  ops.rs  public.rs
crates/api/tests/: admin_integration.rs  auth_integration.rs  board_integration.rs  data_integration.rs  metrics_integration.rs  sharing_integration.rs  workspace_integration.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: apikey_provider.rs  claims.rs  context.rs  control_plane_store.rs  error.rs  lib.rs  membership.rs  password.rs  provider.rs  roles.rs  service.rs  store.rs  store_test.rs  test_utils.rs  user.rs  user_store.rs  user_store_trait.rs  workspace.rs
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: e2e.rs
crates/bench/src/: e2e_config.rs  lib.rs  scenarios.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: error.rs  lib.rs
crates/client/src/batch/: README.md  builder.rs  builder_test.rs  mod.rs
crates/client/src/event/: README.md  builder.rs  builder_test.rs  mod.rs  types.rs
crates/client/src/log/: README.md  builder.rs  builder_test.rs  mod.rs  types.rs
crates/client/src/test/: mod.rs  syslog_tcp.rs  syslog_udp.rs  tcp.rs
crates/collector/: Cargo.toml
crates/collector/src/: main.rs  transformer_builder.rs
crates/collector/src/cmd/: mod.rs  pull.rs  serve.rs
crates/collector/tests/: smoke_test.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: api.rs  api_server.rs  auth.rs  connectors.rs  control.rs  error.rs  global.rs  lib.rs  logging.rs  metrics.rs  query.rs  routing.rs  sinks.rs  sources.rs  telemetry.rs  transformers.rs  validation.rs
crates/connectors/: Cargo.toml  README.md
crates/connectors/src/: config.rs  error.rs  lib.rs  resilience.rs  scheduler.rs  traits.rs
crates/connectors/src/github/: README.md  mod.rs  tests.rs
crates/connectors/src/shopify/: README.md  mod.rs
crates/control/: Cargo.toml
crates/control/src/: db.rs  error.rs  lib.rs
crates/control/src/models/: api_key.rs  board.rs  invite.rs  metric.rs  mod.rs  sharing.rs  workspace.rs
crates/control/src/repos/: api_keys.rs  boards.rs  invites.rs  metrics.rs  mod.rs  sharing.rs  users.rs  workspaces.rs
crates/license/: Cargo.toml
crates/license/src/: error.rs  keys.rs  lib.rs  storage.rs  types.rs  validator.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: collected.rs  lib.rs  reporter.rs  sink_reporter.rs  traits.rs
crates/metrics/src/format/: human.rs  json.rs  mod.rs
crates/pipeline/: Cargo.toml
crates/pipeline/benches/: pipeline.rs
crates/pipeline/src/: error.rs  lib.rs  metrics.rs  router.rs  router_test.rs  sink_handle.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/benches/: batch.rs
crates/protocol/src/: batch.rs  batch_test.rs  decode.rs  decode_test.rs  error.rs  error_test.rs  flatbuf.rs  flatbuf_test.rs  lib.rs  schema.rs  schema_test.rs  source.rs  source_test.rs
crates/protocol/src/decode/: decode_test.rs  event.rs  log.rs  metric.rs  mod.rs  snapshot.rs  table.rs  trace.rs
crates/protocol/src/encode/: batch.rs  event.rs  log.rs  mod.rs
crates/query/: Cargo.toml
crates/query/src/: config.rs  error.rs  lib.rs  result.rs
crates/query/src/backend/: mod.rs
crates/routing/: Cargo.toml  README.md
crates/routing/src/: error.rs  lib.rs  sink_id.rs  table.rs  table_test.rs
crates/sinks/: Cargo.toml  README.md
crates/sinks/benches/: README.md  disk_binary.rs
crates/sinks/src/: common.rs  common_test.rs  lib.rs
crates/sinks/src/arrow_ipc/: README.md  arrow_ipc_test.rs  mod.rs  writer.rs
crates/sinks/src/clickhouse/: README.md  clickhouse_test.rs  config.rs  error.rs  helpers.rs  helpers_test.rs  metrics.rs  mod.rs  sink.rs
crates/sinks/src/disk_binary/: README.md  disk_binary_test.rs  mod.rs  writer.rs
crates/sinks/src/disk_plaintext/: README.md  disk_plaintext_test.rs  mod.rs
crates/sinks/src/forwarder/: README.md  forwarder_test.rs  mod.rs
crates/sinks/src/null/: README.md  mod.rs  null_test.rs
crates/sinks/src/parquet/: README.md  mod.rs  parquet_test.rs  schema.rs  writer.rs
crates/sinks/src/stdout/: README.md  mod.rs  stdout_test.rs
crates/sinks/src/util/: README.md  arrow_rows.rs  atomic_rotation.rs  atomic_rotation_test.rs  buffer_pool.rs  buffer_pool_test.rs  chain_writer.rs  chain_writer_test.rs  json.rs  mod.rs  rate_limited_logger.rs
crates/sources/: Cargo.toml
crates/sources/benches/: README.md  http.rs  syslog.rs  syslog_README.md  tcp.rs
crates/sources/src/: common.rs  lib.rs  sharded_sender.rs  tcp.rs  tcp_debug.rs  tcp_debug_test.rs  tcp_test.rs
crates/sources/src/http/: README.md  auth.rs  config.rs  encoder.rs  error.rs  handlers.rs  http_test.rs  json_types.rs  jsonl.rs  metrics.rs  mod.rs  response.rs
crates/sources/src/syslog/: mod.rs  tcp.rs  tcp_test.rs  udp.rs  udp_test.rs
crates/tap/: Cargo.toml  README.md
crates/tap/src/: buffer.rs  buffer_test.rs  error.rs  filter.rs  filter_test.rs  lib.rs  protocol.rs  protocol_test.rs  server.rs  server_test.rs  subscriber.rs  subscriber_test.rs  tap_point.rs  tap_point_test.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: collector.rs  endpoint.rs  error.rs  lib.rs  payload.rs  reporter.rs
crates/tell/: Cargo.toml
crates/tell/src/: main.rs  transformer_builder.rs
crates/tell/src/cmd/: api.rs  api_server.rs  apikeys.rs  auth.rs  interactive.rs  license.rs  (+9 more)
crates/tell/tests/: smoke_test.rs
crates/transform/: Cargo.toml  README.md
crates/transform/src/: chain.rs  chain_test.rs  error.rs  error_test.rs  lazy_batch.rs  lazy_batch_test.rs  lib.rs  registry.rs  registry_test.rs
(+127 files in other folders)
