[package]
name = "tell-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Analytics engine for Tell - metrics, filters, query building"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = "0.1"

# Query execution
tell-query = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
