[package]
name = "tell-bench"
version = "2.0.0"
edition = "2024"
description = "Shared benchmark configuration and load testing for Tell"
publish = false

[dependencies]
# For loadtest binary
tell-client = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sysinfo = "0.32"
chrono = "0.4"

[dev-dependencies]
tell-protocol = { workspace = true }
tell-sources = { workspace = true }
tell-sinks = { workspace = true }
tell-pipeline = { workspace = true }
tell-auth = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tempfile = { workspace = true }

[[bin]]
name = "tell-bench"
path = "src/bin/tell_bench/main.rs"

[[bench]]
name = "e2e"
harness = false
