[package]
name = "cdp-collector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-performance multi-protocol data streaming engine"

[[bin]]
name = "collector"
path = "src/main.rs"

[features]
default = ["connector-github", "connector-shopify"]
# Connectors - enable the ones you need
connector-github = ["connectors/github"]
connector-shopify = ["connectors/shopify"]
# Future connectors:
# connector-stripe = ["cdp-connectors/stripe"]
# connector-linear = ["cdp-connectors/linear"]

[dependencies]
# Internal crates
cdp-protocol = { workspace = true }
cdp-config = { workspace = true }
cdp-routing = { workspace = true }
pipeline = { workspace = true }
cdp-auth = { workspace = true }
cdp-sources = { workspace = true }
sinks = { workspace = true }
cdp-transform = { workspace = true }
metrics = { workspace = true }
connectors = { workspace = true }
tap = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# High-performance channels
crossfire = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling (anyhow for binary)
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization (for tail output)
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# Terminal (for tail)
atty = "0.2"
owo-colors = "4"

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
cdp-client = { workspace = true }
