[package]
name = "tell-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pull-based connectors (GitHub, Stripe, etc.) for Tell"

[features]
default = ["github", "shopify"]
# Individual connectors - enable only what you need
github = []
shopify = []
# Future connectors:
# stripe = []
# linear = []

[dependencies]
tell-protocol = { workspace = true }

tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP client for external APIs
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Cron scheduling
cron = "0.15"
chrono = { workspace = true }

# URL encoding for search queries
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
