[package]
name = "tell-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Control plane database for Tell - workspaces, boards, users"

[dependencies]
# Database
turso = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Random
rand = "0.9"

# Hashing (for API keys)
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
