[package]
name = "tell-license"
version = "0.1.0"
edition = "2024"
description = "License validation for Tell"

[dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# File paths
dirs = { workspace = true }

[dev-dependencies]
rand = "0.8"
