[package]
name = "metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Internal metrics collection and reporting for CDP Collector"

[dependencies]
cdp-protocol = { workspace = true }
cdp-config = { workspace = true }

parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
