[package]
name = "tell-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async router and channel-based pipeline for Tell"

[dependencies]
tell-protocol = { workspace = true }
tell-routing = { workspace = true }
tell-transform = { workspace = true }
tell-metrics = { workspace = true }
tell-tap = { workspace = true }

tokio = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossfire = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "pipeline"
harness = false
