[package]
name = "tell-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Routing rules and pre-compiled routing tables for Tell"

[dependencies]
tell-protocol = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
