[package]
name = "tell-sinks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Output sinks (ClickHouse, disk, parquet, etc) for Tell"

[dependencies]
tell-protocol = { workspace = true }
tell-metrics = { workspace = true }

tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Lock-free concurrency for atomic rotation
arc-swap = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }

# Date/time for rotation paths
chrono = { workspace = true }

# Terminal colors
owo-colors = { workspace = true }

# Compression
lz4_flex = { workspace = true }

# Client for building FlatBuffer messages (SOC forwarder)
tell-client = { workspace = true }

# Socket configuration (TCP keep-alive)
socket2 = { workspace = true }

# ClickHouse client
clickhouse = { workspace = true }

# UUID for ClickHouse UUID columns
uuid = { workspace = true }

# Enum repr serialization (for ClickHouse Enum8)
serde_repr = { workspace = true }

# Parquet support
parquet = { workspace = true }
arrow = { workspace = true }

# HTTP client for Arrow ClickHouse sink
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
walkdir = "2.5"
tell-bench = { workspace = true }

[features]
default = []
clickhouse = []
parquet = []

[[bench]]
name = "disk_binary"
harness = false
