[package]
name = "cdp-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Network sources (TCP, Syslog) for CDP Collector"

[dependencies]
cdp-protocol = { workspace = true }
cdp-auth = { workspace = true }
metrics = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossfire = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
tempfile = { workspace = true }
cdp-client = { workspace = true }
criterion = { workspace = true }
cdp-bench = { workspace = true }

[[bench]]
name = "tcp"
harness = false

[[bench]]
name = "syslog"
harness = false
