[package]
name = "tell-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Network sources (TCP, Syslog, HTTP) for Tell"

[dependencies]
tell-protocol = { workspace = true }
tell-auth = { workspace = true }
tell-metrics = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossfire = { workspace = true }
socket2 = { workspace = true }
hex = "0.4"

# HTTP source
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
tempfile = { workspace = true }
tell-client = { workspace = true }
criterion = { workspace = true }
tell-bench = { workspace = true }
tower = { workspace = true }

[[bench]]
name = "tcp"
harness = false

[[bench]]
name = "syslog"
harness = false

[[bench]]
name = "http"
harness = false
