[package]
name = "tell-transform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Transformer chain for batch processing in Tell"

[dependencies]
tell-protocol = { workspace = true }
tell-config = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }

# Serialization (for pattern persistence)
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# Hashing
siphasher = "1.0"
hmac = "0.12"
sha2 = "0.10"
xxhash-rust = { workspace = true }

# Regex for filter/redact
regex = "1.10"

# Lazy static initialization
once_cell = "1.19"

# Base62 encoding for pseudonymization
base62 = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
